<resources>
    <string name="app_name">WhiteBoard</string>
    <string name="course_id">CSC-430</string>
    <string name="msg_board">Message Board</string>
    <string name="user_name">User Name: </string>
    <string name="password">Password: </string>
    <string name="survey">Survey#: </string>
    <string name="user_name_hint">Enter User Name</string>
    <string name="password_hint">Enter Password</string>
    <string name="login_btn_text">LOGIN</string>
    <string name="remember_checkbox_text">Remember Me</string>
    <string name="mark_all_handled_text">Mark All As Handled</string>
    <string name="concern_percentage">90%</string>
    <string name="priority_comment">{ concern commentData plain text data here }</string>
    <string name="handled_checkbox_text">Mark as handled</string>
    <string name="view_replies_btn">View Replies</string>
    <string name="update">UPDATE</string>
    <string name="first_name_label">First Name:</string>
    <string name="last_name_label">Last Name:</string>
    <string name="email_label">Email:</string>
    <string name="first_name_hint">Enter First Name</string>
    <string name="last_name_hint">Enter Last Name</string>
    <string name="email_hint">Enter Email</string>
    <string name="go_to_session_btn_text">GO TO SESSION</string>
    <string name="go_to_survey_btn_text">GO TO SURVEY</string>
    <string name="response_text">{ Response Item }</string>
    <string name="response_description">{ Response Description }</string>
    <string name="survey_question_text">N- { Survey Question } :</string>
    <string name="equals_sign">=</string>
    <string name="response_percentage_text">{ 0% }</string>
    <string name="course_number_text">{ Course Number }</string>
    <string name="course_name_text">{ Course Name }</string>
    <string name="session_text">{ Session: Month-Year }</string>
    <string name="survey_name">{ Survey Name }</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Class Name</string>
    <string name="nav_header_subtitle">User Name</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_session_selector">Session Selection</string>
    <string name="nav_majority_concern">Majority Concern</string>
    <string name="nav_initial_survey">Initial Survey</string>
    <string name="nav_survey_results">Survey Selector</string>

    <string name="menu_progressive_survey">Weekly Survey</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_new_comment">Add Comment</string>
    <string name="comment_hint">Enter Comment Here.</string>
    <string name="initial_count">0/250</string>
    <string name="initial_replies">0</string>
    <string name="initial_up_votes">0</string>

    <string name="initial_seek_bar">0%</string>
    <string name="progressive_filler">Weekly Survey Question</string>
    <string name="class_confidence">CLASS CONFIDENCE : </string>
    <string name="forgot_password_label">Forgot My Password</string>
    <string name="recovery_prompt_label">Enter your UserName or Email:</string>
    <string name="email_recovery_notification">(A temporary password will be sent to the email you have registered with WhiteBoard)</string>
    <string name="submit_button_label">SUBMIT</string>
    <string name="temp_password_label">Enter the temporary password that was sent to your account email and choose a new password:</string>
    <string name="temporary_password_label">Temporary Password:</string>
    <string name="temp_password_hint">Enter Temp Password</string>
    <string name="new_password_label">New Password:</string>
    <string name="confirm_new_password_label">Confirm New Password:</string>
    <string name="confirm_new_password_text">Re-enter New Password</string>
    <string name="new_password_hint">Enter New Password</string>
    <string name="percent_sign">%</string>
    <string name="student_confidence_label">Confidence:</string>
    <string name="elo_number_label">ELO #</string>
    <string name="elo_number">N</string>
    <string name="class_confidence_2">{ Class Confidence }</string>
    <string name="anonymous_label">Anonymous</string>
    <string name="user_profile_image_description">USER_AVATAR</string>
    <string name="reply_icon_info">REPLY_ICON</string>
    <string name="upvote_icon_info">UPVOTE_ICON</string>
    <string name="user_name_recovery_hint">User Name or Email@email.com</string>
    <string name="whiteboard_splash_screen_label">WhiteBoard</string>
    <string name="wb_logo_desc">WB_LOGO</string>
    <string name="comment_filler">{ Here is the actual comment that gets posted to this view by the user }</string>
    
    <string name="credentials_incorrect"><u>Username/Password Incorrect</u></string>


</resources>
