<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/resetPromptTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingBottom="50dp"
        android:text="@string/temp_password_label"
        android:textAlignment="center"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/userTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name_label"
        android:textSize="18sp"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/userEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/user_name_hint"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tempPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temporary_password_label"
        android:textSize="18sp"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/tempPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/temp_password_hint"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/newPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password_label"
        android:textSize="18sp"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/newPasswordEditView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/new_password_hint"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/confirmNewPasswordEditView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/confirm_new_password_text"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:width="140dp"
        android:text="@string/submit_button_label" />

</LinearLayout>