<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/recoveryPromptTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingBottom="50dp"
        android:text="@string/recovery_prompt_label"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="18sp"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/userNameEditView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/user_name_hint"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/email_label"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/emailEditView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Enter Account Email"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/emailNotificationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/email_recovery_notification"
        android:textAlignment="center"
        android:paddingTop="30dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:width="140dp"
        android:text="@string/submit_button_label" />

</LinearLayout>