<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_progressiveSurvey"
            android:icon="@drawable/ic_menu_progressive_survey"
            android:title="@string/menu_progressive_survey" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_newComment"
                android:icon="@drawable/ic_dialog_comment"
                android:iconTint="@android:color/black"
                android:title="@string/menu_new_comment" />
        </menu>
    </item>

</menu>
