<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/profProgessiveQuestionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/progressive_filler"
            android:textStyle="bold"
            android:paddingHorizontal="5sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/new_comment_text_size"
                android:text="@string/class_confidence"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/profClassConfidence"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/initial_seek_bar"
                android:paddingHorizontal="5sp"
                android:textStyle="bold"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>