<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/commentCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_layout_margin_left"
        android:layout_marginTop="@dimen/default_layout_margin_top"
        android:layout_marginEnd="@dimen/default_layout_margin_right"
        android:layout_marginBottom="@dimen/default_layout_margin_bottom"
        app:cardCornerRadius="@dimen/corner_radius"
        app:cardElevation="@dimen/card_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:layout_marginStart="@dimen/default_layout_margin_left"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/default_layout_margin_right"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/userImageView"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="bottom|start"
                            android:background="@color/commentCardBackground"
                            android:layout_marginStart="@dimen/default_layout_margin_left"
                            android:layout_marginEnd="0dp"
                            android:contentDescription="@string/user_profile_image_description"
                            app:srcCompat="@drawable/ic_contact_silhouette" />

                        <TextView
                            android:id="@+id/userNameTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:paddingEnd="0dp"
                            android:layout_gravity="center"
                            android:text="@string/user_name_label" />
                    </LinearLayout>



                </LinearLayout>


                <TextView
                    android:id="@+id/commentCardTextView"
                    android:text="{ This a user comment place holder... }"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_layout_margin_left"
                    android:layout_marginEnd="@dimen/dialog_layout_margin_right"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:maxLength="250"
                    android:clickable="true"
                    android:textSize="@dimen/new_comment_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/replyToComment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:contentDescription="@string/reply_icon_info"
                    android:layout_marginStart="@dimen/default_layout_margin_left"
                    android:layout_marginEnd="0dp"
                    app:srcCompat="@drawable/ic_action_reply_comment" />

                <TextView
                    android:id="@+id/numReplies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:paddingStart="3dp"
                    android:paddingEnd="0dp"
                    android:text="@string/initial_replies"
                    android:textSize="@dimen/counter_text_size" />

                <ImageView
                    android:id="@+id/upVoteComment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_layout_margin_left"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:clickable="true"
                    android:contentDescription="@string/upvote_icon_info"
                    app:srcCompat="@drawable/ic_action_up_vote_comment" />

                <TextView
                    android:id="@+id/numVotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:paddingStart="3dp"
                    android:paddingEnd="0dp"
                    android:text="@string/initial_replies"
                    android:textSize="@dimen/counter_text_size" />

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>